Name:                   timemap
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               An atomically modifiable map, implicitly indexed by UTCTime.
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.TimeMap
  Other-Modules:        Data.TimeMap.Internal
  Build-Depends:        base >= 4.8 && < 5
                      , containers
                      , hashable
                      , stm
                      , time
                      , unordered-containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall -threaded
  Main-Is:              Spec.hs
  Other-Modules:        Data.TimeMap
  Build-Depends:        base
                      , containers
                      , hashable
                      , stm
                      , time
                      , unordered-containers
                      , tasty
                      , tasty-quickcheck
                      , tasty-hunit
                      , QuickCheck
                      , quickcheck-instances

Source-Repository head
  Type:                 git
--  Location:
